Fix search button sizing on Safari
Remove `width:100%` on the search button icon, as this is behaving differently on Safari with the fle container.

--- a/DfE.FindInformationAcademiesTrusts/assets/sass/components/_search.scss
+++ b/DfE.FindInformationAcademiesTrusts/assets/sass/components/_search.scss
@@ -48,7 +48,6 @@
   }
 
   .app-search__icon {
-    width: 100%;
     height: 100%;
   }
 
